  bug; if only part of the first line was visible due to scrolling and a
  selection began in the part that was not visible, painting the
  selection would throw an exception which would result in the selection
  extension being removed from the text area.

- Printing is no longer done in a background thread, and now blocks the
  UI. due to various thread-safety problems.

- Printing a range of pages would always print starting from the first
  page.

- jEdit didn't compile with Java 2 version 1.3.

- Invalid delegates in syntax mode files could throw exceptions.

- "Spaces to Tabs" was broken.

- Added a workaround for the print spacing problem on some Java
  versions. Note that this results in much larger spool files. Enable in
  Utilities->Global Options->Printing.

- Added a workaround for buggy/incomplete implementations of JDK 1.4
  printing API. Now you can force use of the JDK 1.3 API when running on
  1.4. Enable in Utilities->Global Options->Printing.

- Re-introduced jEdit 3.2.2-style Unix window geometry workarounds. If
  you saw problems like dialog boxes getting smaller each time they were
  opened, etc, let me know if this fixes them.

- Fixed hang if a mode contains regular expression rules that match a
  zero-width string.

- The jEditLauncher configuration is no longer updated if installing a
  new jEdit release over an old one with the jEditLauncher de-selected
  in the installer.

- When searching for text, jEdit tries a little harder to make sure the
  search occurrence is visible if the text area needs to be scrolled
  horizontally.

- When using TAB to move focus from the buffer switcher, or search bar,
  etc. it should eventually end up in the text area, instead of getting
  stuck.

- Simplified key event workaround code. Let me know if you encouter any
  problems (such as garbage being inserted in the text area when certain
  keys are pressed, etc.)

- File dialog's completion was case sensitive when the TAB key was